example-ingress/test-ingress.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: test-ingress
spec:
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: test-ingress
spec:
  type: ExternalName
  externalName: hello-world-app.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: test-ingress
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  # type: NodePort
  type: LoadBalancer
  selector:
    app: hello-world-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app2
  namespace: test-ingress
spec:
  selector:
    matchLabels:
      app: hello-world-app2
  template:
    metadata:
      labels:
        app: hello-world-app2
    spec:
      containers:
        - name: hello-world-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
              containers:
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
          
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app2
  namespace: test-ingress
spec:
  type: ExternalName
  externalName: hello-world-app2.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app2
  namespace: test-ingress
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  # type: NodePort
  type: LoadBalancer
  selector:
    app: hello-world-app2



---
apiVersion: v1
kind: Namespace
metadata:
  name:  test-ingress


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-ingress
  annotations:
    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
spec:
  ingressClassName: nginx
  rules:
    - host: hello.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 80
    - host: hello2.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-app2
                port:
                  number: 80
    - host: fastapi.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-fastapitest-service
                port:
                  number: 8001

            # pathType: "Prefix"

---
apiVersion: v1
kind: Service
metadata:
  name: dev-fastapitest-service
  namespace: test-ingress
spec:
  type: ExternalName
  externalName: dev-fastapitest-service.dev.svc.cluster.local
